--- a/todo-web/src/styles/config.css
+++ b/todo-web/src/styles/config.css
@@ -11,6 +11,18 @@
   animation: spin 1s linear infinite;
 }
 
+.iconTask {
+  position: absolute;
+  align-self: center;
+  justify-self: center;
+  animation: pulseOpacity 5s infinite;
+}
+
+.loaded {
+  justify-content: center;
+  align-items: center;
+}
+
 p {
   color: #ffffff99;
 }
@@ -32,5 +44,17 @@ p {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes pulseOpacity {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
   }
 }
